--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,6 +8,7 @@
     </title>
 </head>
 <body>
+    <a href="../index.html">Home</a>
     <h1>Lasagna</h1>
     <img src= "../recipes/lasagne.jpg" alt ="lasagna picture">
 
